added functionality to the library

--- a/index.html
+++ b/index.html
@@ -24,17 +24,12 @@
             <li>Contact</li>
         </ul>
     </div>
-    <div class="main">
+    <div class="main" id="library">
         <div class="add-book" onclick="openForm()">
             <img src="img/plus.svg" alt="Add" height="50px">
             <p>Add a book!</p>
         </div>
-        <div class="book">
-            <div class="title">Title: The Call of Cthulhu</div>
-            <div class="author">Author: H.P. Lovecraft</div>
-            <div class="pages">Pages: 35</div>
-            <div class="read">Read: Yes</div>
-        </div>
+        
     </div>
     <div class="form inactive" id="formDiv">
         <form id="form">
