--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
             <input type="text" name="title" placeholder="Title" id="form-title" required>
             <input type="text" name="author" placeholder="Author" id="form-author" required>
             <input type="number" name="pages" placeholder="Pages" id="form-pages" min="1">
+            <input type="text" name="genre" placeholder="Genre" id="form-genre" required>
             <div class="is-readed">
-                <label for="is-readed">Have you read it?</label>
+                <label>Have you read it?</label>
                 <input type="checkbox" id="form-read">
             </div>
             <div class="confirmation">
